# japrzejebane

./: .gitignore  .venv_template  README.md  config.py  poetry.toml  pyproject.toml  user_settings.json
reports/: report_spending_by_category_20250809054046.json
src/: main.py  reports.py  run_all.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
